[project]
name = "mcp-trino-python"
version = "0.7.1"
description = "A Model Context Protocol (MCP) connector for Trino, enabling seamless integration between MCP-compliant services and Trino query engine"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
keywords = ["trino", "connector", "mcp", "iceberg", "data-catalog"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "loguru>=0.7.3",
    "mcp[cli]>=1.22.0",
    "python-dotenv>=1.2.1",
    "trino>=0.336.0",
]

[project.optional-dependencies]
# For running HTTP-based transports (streamable-http, sse)
http = ["uvicorn>=0.32.0", "starlette>=0.41.0"]

[project.scripts]
mcp-trino = "server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
target-version = ["py312"]
line-length = 120
skip-string-normalization = true
